Sim, This is an example of how to fix illegal characters in URI / URL strings and normalise.  This might address the issues you're seeing with spaces in codebase annotations and it may not, if spaces are still present (I haven't had much time to look at this), then you'll need to find where codebase annotations are being generated and escape the illegal characters prior to them being used as codebase annotations for services.
Hope this helps.

git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/trunk@1404901 13f79535-47bb-0310-9956-ffa450edef68